--- a/package.yml
+++ b/package.yml
@@ -1,39 +1,17 @@
 name       : findbugs          # name of the package
-version    : 3.0.1-1       # version of the package
-kind       : tool                     # one of tool or spec(s)
+version    : 3.0.1-1           # version of the package
+kind       : tool              # one of tool or spec(s)
 description: A program which uses static analysis to look for bugs in Java code.
 
 author:
   - name: John L. Singleton
     email: jsinglet@gmail.com
 
-
-
-# a list of the named and versioned packages that must be installed before
-# installing 
-# depends:                               
-#   - package   : other-package   # represents a package that MUST be installed
-#     version   : 1.1.1
-#     platform  : all 
-#   - package   : other-package
-#     version   : 1.1.1
-#   - one-of:                     # at least one of these must be installed  
-#       - package: z3
-#         version: 1.1.2
-#         platform: all
-#       - package: why3
-#         version: 1.1.2
-#         platform: all
-
-#
-# assets that make up THIS package
-#
-
-# assets:
-#     - asset   : MAIN
-#       name    : my-asset
-#       url     : http://www.openjml.org/downloads/1.1.2.tar.gz  
-#       platform: all
+assets:
+    - asset   : MAIN
+      name    : Findbugs Distribution (3.0.1)
+      url     : http://iweb.dl.sourceforge.net/project/findbugs/findbugs/3.0.1/findbugs-3.0.1.zip
+      platform: all
         
 # assumes:
 #   - cmd: java --version # right now just support cmd -- maybe file exists?
@@ -41,11 +19,7 @@ author:
 #     message: "Sorry, but this package requires Java, version 1.7 or higher."
 
 
-# downloads everything to the .
-# install:
-#   - cmd: tar zxvf MAIN
-#     description: What this command does
-#     platform: all
-#   - cmd: tar zxvf $MAIN
-#     description: What this command does...
-#     platform: windows
+install:
+  - cmd: unzip MAIN
+    description: Unpacking FindBugs Distribution...
+    platform: all
