--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 name       : findbugs          # name of the package
-version    : 3.0.1-1           # version of the package
+version    : 3.0.1-2           # version of the package
 kind       : tool              # one of tool or spec(s)
 description: A program which uses static analysis to look for bugs in Java code.
 
@@ -12,11 +12,12 @@ assets:
       name    : Findbugs Distribution (3.0.1)
       url     : http://iweb.dl.sourceforge.net/project/findbugs/findbugs/3.0.1/findbugs-3.0.1.zip
       platform: all
-        
-# assumes:
-#   - cmd: java --version # right now just support cmd -- maybe file exists?
-#     contains: 1.7
-#     message: "Sorry, but this package requires Java, version 1.7 or higher."
+
+assumes:
+  - cmd: java -version
+    matches: java version "1.[7-9].*
+    message: "Please install a recent version of Java 1.7 or greater."
+    platform: all
 
 
 install:
